prevent wrapping

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -394,6 +394,7 @@ th {
 td {
     font-size: 0.8rem;
     font-variant-numeric: tabular-nums;
+    white-space: nowrap;
 }
 
 tr:hover {
